...
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">


    <ScrollView
        android:id="@+id/scrollablContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        >

        <LinearLayout
            android:id="@+id/content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/activity_card"
...
                        app:srcCompat="@drawable/ic_navigate_next_black_24dp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/stats_card"
                android:layout_width="wrap_content"
                android:layout_height="169dp"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="15dp"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:minHeight="200dp"
...
