<resources>
    <string name="app_name">Plogging Lovers</string>
    <string name="title_activity_home">Plogging Lovers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Student</string>
    <string name="nav_header_subtitle">email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_text_logout">Log Out</string>
    <string name="title_activity_ecopontos">Map</string>
    <string name="emailEmpty">Email field is empty</string>
    <string name="invalidLogin">Email or Password Incorrect</string>
    <string name="emptyForms">Email and password fields are empty</string>
    <string name="invalidEmailEmpty">Invalid Email</string>
</resources>
