<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/lblResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_vertical_1" />

    <EditText
        android:id="@+id/edtEmailReset"
        android:layout_width="223dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/lblResetPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnSendEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSendEmail"
        android:text="Enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailReset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/lblResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Introduz o e-mail associado à tua conta e receberás as intruções para alterares a palavra passe"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintBottom_toTopOf="@id/edtEmailReset"/>
</androidx.constraintlayout.widget.ConstraintLayout>